<resources>
    <string name="app_name">ButterknifeDome</string>
    <string name="tv1">第一行</string>
    <string name="tv2">第二行</string>
    <string name="tv3">第三行</string>
    <string name="bu1">跳转EventActivity</string>
    <string name="bu2">点点我吧2</string>
    <string name="bu3">点点我吧3</string>
    <string name="bu4">点点我吧4</string>
    <string name="event_bu">模拟数据按钮</string>
    <string name="event_tv">嘿嘿eventbus3.0</string>


</resources>
